test/spec_vectors/simd_load/fail/module_17.wat
(module (memory 1) (func (local v128) (drop (v128.load (f32.const 0)))))